--- a/bmqas/about.html
+++ b/bmqas/about.html
@@ -63,7 +63,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<nav class="link-effect-4" id="link-effect-4">
 								<ul class="nav navbar-nav">
-									<li ><a href="index.html" data-hover="Home">Home </a></li>
+									<li><a href="index.html" data-hover="Home">Home </a></li>
 									<li><a data-hover="Services" href="services.html">Services</a></li>
 									<li><a data-hover="Services" href="apps.html">Apps</a></li>
 									<li class="active"><a href="about.html" data-hover="About">About Us</a></li>
@@ -98,10 +98,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							on end-user value, not using technology for the sake of technology, but bringing technology to solve real-world challenges
 							with great intuitive user-experiences.
 						</p> <br/> <br/>
-						<p>The principals of Bengal Mobile QA Solution come with development and project delivery experience at Fortune 500 Companies,
-							such as Oracle, Price Waterhouse, and Apple, and with educational background at prestigious institutions including
-							M.I.T, Stanford and other prestigious regional universities. We hire only top-notch development and project management
-							resources who can take on multiple projects with a goal of excellence in anything that they embark on.</p> <br/> <br/>
+						<p>SurroundApps is a Silicon-Valley-based company that has built Alert-Family. BengalMobileQA is a BASIS-member software
+							company that does software development outsourcing for SurroundApps and is reselling and supporting this software
+							in Bangladesh. The principals of SurroundApps come with development and project delivery experience at Fortune 500
+							Companies, such as Oracle, Price Waterhouse, and Apple, and with educational background at prestigious institutions
+							including M.I.T, Stanford and other prestigious regional universities. We hire only top-notch development and project
+							management resources who can take on multiple projects with a goal of excellence in anything that they embark on.</p>
+						<br/> <br/>
 						<p>Our competencies span the digital domain to include business analysis, user experience design, software engineering,
 							quality assurance and reliable cloud-based application hosting and management. Our mission is to deliver entrepreneurs,
 							and businesses with a full suite of digital services, providing inter-disciplinary expertise on tap. And in our Application
@@ -277,30 +280,43 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 
 
-	<!---footer -->
-	<div class="footer-section">
+<!---footer -->
+<div class="footer-section">
 		<div class="container">
-			<!-- <div class="col-md-3 footer-grid">
-					<h4>Newsletter</h4>
-					<p>Lorem Ipsum available, but the majority have suffe red by injected humour, randomised words which don't look even.</p>
-						<form action="#" method="post">
-							<input type="text" name="Email" placeholder="enter email address" required>
-							<input type="submit" value="Go">
-						</form>
-				</div> -->
+			<div class="col-md-3 footer-grid">
+				<h4>Newsletter</h4>
+				<p>Please Enter your email for recive info of our Extreme Offer and product</p>
+				<form action="#" method="post">
+					<input type="text" name="Email" placeholder="enter email address" required>
+					<input type="submit" value="Go">
+				</form>
+			</div>
 
-			<div class="col-md-4 footer-grid">
+			<div class="col-md-3 footer-grid">
 				<h4>Other Link</h4>
 				<ul>
-					<li>Other Link</li>
-					<li>Other Link</li>
-					<li>Other Link</li>
-					<li>Other Link</li>
-					<li>Other Link</li>
-					<li>Other Link</li>
+					<a href="#">
+						<li>Privacy Policy</li>
+					</a>
+					<a href="#">
+						<li>Terms and Conditions</li>
+					</a>
+					<a href="#">
+						<li>FAQ’s</li>
+					</a>
+					<a href="#">
+						<li>Sitemap</li>
+					</a>
+					<a href="#">
+						<li>GET TO KNOW US - Press Materials , Press Corner</li>
+					</a>
+					<a href="#">
+						<li>Follow US Option</li>
+					</a>
+
 				</ul>
 			</div>
-			<div class="col-md-4 footer-grid">
+			<div class="col-md-3 footer-grid">
 				<h4>Contact</h4>
 
 				<p><i class="glyphicon glyphicon-home" aria-hidden="true"></i>53, Purana Paltan (2nd Floor),</p>
@@ -310,16 +326,31 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 
 			</div>
-			<div class="col-md-4 footer-grid">
-				<h4>We are on Social</h4>
-				<ul>
-					<li>Facebook</li>
-					<li>Youtube</li>
-					<li>Linked In</li>
-					<li>Rss</li>
-					<li>Google+</li>
-
-				</ul>
+			<div class="col-md-3 footer-grid">
+				<h4 class="col-md-12">We are on Social</h4>
+				<div class="col-md-12">
+					<a class=" col-md-2 btn btn-social-icon  btn-facebook" href="#">
+						<span class="fa fa-facebook"></span>
+					</a>
+					<a class="col-md-2 btn btn-social-icon btn-instagram" href="#">
+						<span class="fa fa-instagram"></span>
+					</a>
+					<a class=" col-md-2 btn btn-social-icon btn-youtube" href="#">
+						<span class="fa fa-youtube"></span>
+					</a>
+					<a class="col-md-2 btn btn-social-icon btn-linkedin" href="#">
+						<span class="fa fa-linkedin"></span>
+					</a>
+					<a class="col-md-2 btn btn-social-icon btn-twitter" href="#">
+						<span class="fa fa-twitter"></span>
+					</a>
+					<a class="col-md-2 btn btn-social-icon btn-google" href="#">
+						<span class="fa fa-google-plus"></span>
+					</a>
+					<a class="col-md-2 btn btn-social-icon btn-rss" href="#">
+						<span class="fa fa-rss"></span>
+					</a>
+				</div>
 			</div>
 			<div class="clearfix"></div>
 		</div>
