--- a/bmqas/services.html
+++ b/bmqas/services.html
@@ -62,7 +62,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<nav class="link-effect-4" id="link-effect-4">
 								<ul class="nav navbar-nav">
-									<li ><a href="index.html" data-hover="Home">Home </a></li>
+									<li><a href="index.html" data-hover="Home">Home </a></li>
 									<li class="active"><a data-hover="Services" href="services.html">Services</a></li>
 									<li><a data-hover="Services" href="apps.html">Apps</a></li>
 									<li><a href="about.html" data-hover="About">About Us</a></li>
@@ -92,8 +92,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<div class="right-grid">
 								<h4>Mobile, Cloud and Facebook Apps </h4>
-								<p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-									aliqua..</p>
+								<p>Our developers are experienced in developing mobile, Facebook and cloud based apps. We are experts in software cross-platform
+									development and we deliver high quality mobile, Facebook and cloud based app solutions to clients across the world.</p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
@@ -105,8 +105,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<div class="right-grid">
 								<h4>IT Solution Acceleration</h4>
-								<p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-									aliqua..</p>
+								<p>Bengal Mobile QA Solution is a trusted partner of software and IT development and QA organizations helping ensure
+									high quality dependable software.</p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
@@ -118,8 +118,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<div class="right-grid">
 								<h4>Creative Design for Web, Mobile and Thick Client Apps </h4>
-								<p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-									aliqua..</p>
+								<p>Bengal Mobile QA Solution has a powerful creative design practice that we leverage for all our other development
+									activities. We always try to come up with very unique design and focus on the creativity. </p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
@@ -134,8 +134,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<div class="right-grid">
 								<h4>Customer Collaboration</h4>
-								<p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-									aliqua..</p>
+								<p>Customers are our always first priority and we always try to give them the most importance. We focus on our customers’
+									requirement and always try to deliver our service according to the clients’ requirement in time. </p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
@@ -147,8 +147,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<div class="right-grid">
 								<h4>Technology </h4>
-								<p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-									aliqua..</p>
+								<p>Our technological team has experience in wide varieties of development platforms and we like to choose the appropriate
+									tool from our tool-belt to build the right solution.</p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
@@ -160,8 +160,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<div class="right-grid">
 								<h4>Quality & Expenses </h4>
-								<p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-									aliqua..</p>
+								<p>Maintaining world class quality is our commitment. Also we always try of offer our client a great deal. Bengal Mobile
+									QA Solution always try to provide its’ client the best service with a less expense. </p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
@@ -412,30 +412,43 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 
 
-	<!---footer -->
-	<div class="footer-section">
+<!---footer -->
+<div class="footer-section">
 		<div class="container">
-			<!-- <div class="col-md-3 footer-grid">
-					<h4>Newsletter</h4>
-					<p>Lorem Ipsum available, but the majority have suffe red by injected humour, randomised words which don't look even.</p>
-						<form action="#" method="post">
-							<input type="text" name="Email" placeholder="enter email address" required>
-							<input type="submit" value="Go">
-						</form>
-				</div> -->
+			<div class="col-md-3 footer-grid">
+				<h4>Newsletter</h4>
+				<p>Please Enter your email for recive info of our Extreme Offer and product</p>
+				<form action="#" method="post">
+					<input type="text" name="Email" placeholder="enter email address" required>
+					<input type="submit" value="Go">
+				</form>
+			</div>
 
-			<div class="col-md-4 footer-grid">
+			<div class="col-md-3 footer-grid">
 				<h4>Other Link</h4>
 				<ul>
-					<li>Other Link</li>
-					<li>Other Link</li>
-					<li>Other Link</li>
-					<li>Other Link</li>
-					<li>Other Link</li>
-					<li>Other Link</li>
+					<a href="#">
+						<li>Privacy Policy</li>
+					</a>
+					<a href="#">
+						<li>Terms and Conditions</li>
+					</a>
+					<a href="#">
+						<li>FAQ’s</li>
+					</a>
+					<a href="#">
+						<li>Sitemap</li>
+					</a>
+					<a href="#">
+						<li>GET TO KNOW US - Press Materials , Press Corner</li>
+					</a>
+					<a href="#">
+						<li>Follow US Option</li>
+					</a>
+
 				</ul>
 			</div>
-			<div class="col-md-4 footer-grid">
+			<div class="col-md-3 footer-grid">
 				<h4>Contact</h4>
 
 				<p><i class="glyphicon glyphicon-home" aria-hidden="true"></i>53, Purana Paltan (2nd Floor),</p>
@@ -445,16 +458,31 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 
 			</div>
-			<div class="col-md-4 footer-grid">
-				<h4>We are on Social</h4>
-				<ul>
-					<li>Facebook</li>
-					<li>Youtube</li>
-					<li>Linked In</li>
-					<li>Rss</li>
-					<li>Google+</li>
-
-				</ul>
+			<div class="col-md-3 footer-grid">
+				<h4 class="col-md-12">We are on Social</h4>
+				<div class="col-md-12">
+					<a class=" col-md-2 btn btn-social-icon  btn-facebook" href="#">
+						<span class="fa fa-facebook"></span>
+					</a>
+					<a class="col-md-2 btn btn-social-icon btn-instagram" href="#">
+						<span class="fa fa-instagram"></span>
+					</a>
+					<a class=" col-md-2 btn btn-social-icon btn-youtube" href="#">
+						<span class="fa fa-youtube"></span>
+					</a>
+					<a class="col-md-2 btn btn-social-icon btn-linkedin" href="#">
+						<span class="fa fa-linkedin"></span>
+					</a>
+					<a class="col-md-2 btn btn-social-icon btn-twitter" href="#">
+						<span class="fa fa-twitter"></span>
+					</a>
+					<a class="col-md-2 btn btn-social-icon btn-google" href="#">
+						<span class="fa fa-google-plus"></span>
+					</a>
+					<a class="col-md-2 btn btn-social-icon btn-rss" href="#">
+						<span class="fa fa-rss"></span>
+					</a>
+				</div>
 			</div>
 			<div class="clearfix"></div>
 		</div>
