--- a/bmqas/about.html
+++ b/bmqas/about.html
@@ -14,8 +14,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<link href="css/bootstrap-social.css" rel="stylesheet" type="text/css" media="all">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="Smart Refit Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola web design" />
 	<!--  -->
 	<!--js-->
 	<script src="js/jquery-1.11.1.min.js"></script>
@@ -118,6 +116,33 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		</div>
 		<!--about -->
+
+		<!--statistics-->
+		<div class="statistics">
+				<div class="container">
+					<div class="statistics-grids">
+						<div class="col-md-3 statistics-grid">
+								<!-- data-min='0' data-max='250' -->
+							<div class='numscroller numscroller-big-bottom' data-slno='1'  data-delay='.5' data-increment="2">230+</div>
+							<h5>Projects</h5>
+						</div>
+						<div class="col-md-3 statistics-grid">
+							<div class='numscroller numscroller-big-bottom' data-slno='1' data-delay='.5' data-increment="1">90+</div>
+							<h5>Engineers</h5>
+						</div>
+						<div class="col-md-3 statistics-grid">
+							<div class='numscroller numscroller-big-bottom' data-slno='1' data-delay='.5' data-increment="50">5560+</div>
+							<h5>Working Days</h5>
+						</div>
+						<div class="col-md-3 statistics-grid">
+							<div class='numscroller numscroller-big-bottom' data-slno='1'  data-delay='.5' data-increment="100">51500+</div>
+							<h5>Happy Customers</h5>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+				</div>
+			</div>
+			<!--statistics-->
 		<!--team-->
 		<!-- <div class="team">
 							<div class="container">
@@ -352,6 +377,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<span class="fa fa-rss"></span>
 					</a>
 				</div>
+				<div class="col-md-12" style="    margin-top: 55px;"> 
+					<img src="images/member-basis.jpg" class="img-responsive" alt="/">
+				</div>
 			</div>
 			<div class="clearfix"></div>
 		</div>
@@ -360,7 +388,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!---copy-->
 	<div class="copy-section">
 		<div class="container">
-			<p>&copy; 2017 Bengal Mobile QA Solution . All rights reserved | Design by <a href="#">Bengal Mobile QA Solution</a></p>
+			<p>&copy; 2012 - 2017 Bengal Mobile QA Solution . All rights reserved | Design by <a href="#">Bengal Mobile QA Solution</a></p>
 		</div>
 	</div>
 	<!---copy-->
