--- a/bmqas/footer.html
+++ b/bmqas/footer.html
@@ -69,6 +69,9 @@
 						<span class="fa fa-rss"></span>
 					</a>
 				</div>
+				<div class="col-md-12" style="    margin-top: 55px;"> 
+					<img src="images/member-basis.jpg" class="img-responsive" alt="/">
+				</div>
 			</div>
 			<div class="clearfix"></div>
 		</div>
@@ -77,7 +80,7 @@
 	<!---copy-->
 	<div class="copy-section">
 		<div class="container">
-			<p>&copy; 2017 Bengal Mobile QA Solution . All rights reserved | Design by <a href="#">Bengal Mobile QA Solution</a></p>
+			<p>&copy; 2012 - 2017 Bengal Mobile QA Solution . All rights reserved | Design by <a href="#">Bengal Mobile QA Solution</a></p>
 		</div>
 	</div>
 	<!---copy-->
