--- a/bmqas/services.html
+++ b/bmqas/services.html
@@ -484,6 +484,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<span class="fa fa-rss"></span>
 					</a>
 				</div>
+				<div class="col-md-12" style="    margin-top: 55px;"> 
+					<img src="images/member-basis.jpg" class="img-responsive" alt="/">
+				</div>
 			</div>
 			<div class="clearfix"></div>
 		</div>
@@ -492,7 +495,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!---copy-->
 	<div class="copy-section">
 		<div class="container">
-			<p>&copy; 2017 Bengal Mobile QA Solution . All rights reserved | Design by <a href="#">Bengal Mobile QA Solution</a></p>
+			<p>&copy; 2012 - 2017 Bengal Mobile QA Solution . All rights reserved | Design by <a href="#">Bengal Mobile QA Solution</a></p>
 		</div>
 	</div>
 	<!---copy-->
