--- a/bmqas/index.html
+++ b/bmqas/index.html
@@ -14,11 +14,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<link href="css/bootstrap-social.css" rel="stylesheet" type="text/css" media="all">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="Smart Refit Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola web design" />
 	<!--  -->
 	<!--js-->
 	<script src="js/jquery-1.11.1.min.js"></script>
+	<script src="js/csi.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="js/bootstrap.js"></script>
 
@@ -42,61 +41,61 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </head>
 
 <body>
-	<!--header-->
-	<div class="header">
-		<div class="header-top">
-			<div class="container">
-				<div class="indicat">
-					<span><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Bengal Mobile QA Solution. 53, Purana Paltan (2nd Floor), Dhaka, 1000</span>
-				</div>
-				<div class="detail">
-					<ul>
-						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +880 1700 15 22 56</li>
-						<li><i class="glyphicon glyphicon-time" aria-hidden="true"></i> Sun-Thurs 10:00 am to 8:00 pm </li>
-					</ul>
-				</div>
-				<div class="clearfix"></div>
-			</div>
-		</div>
-		<div class="container">
-			<div class="header-menu">
-				<nav class="navbar navbar-default">
-					<div class="container-fluid">
-						<!-- Brand and toggle get grouped for better mobile display -->
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-							 aria-expanded="false">
-										<span class="sr-only">Toggle navigation</span>
-										<span class="icon-bar"></span>
-										<span class="icon-bar"></span>
-										<span class="icon-bar"></span>
-									  </button>
-							<div class="navbar-brand logo">
-								<h1><a href="index.html"><span>Bengal Mobile QA Solution</span></a></h1>
-							</div>
+
+		<!--header-->
+		<div class="header">
+				<div class="header-top">
+					<div class="container">
+						<div class="indicat">
+							<span><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Bengal Mobile QA Solution. 53, Purana Paltan (2nd Floor), Dhaka, 1000</span>
 						</div>
-						<!-- Collect the nav links, forms, and other content for toggling -->
-						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-							<nav class="link-effect-4" id="link-effect-4">
-								<ul class="nav navbar-nav">
-									<li class="active"><a href="index.html" data-hover="Home">Home </a></li>
-									<li><a data-hover="Services" href="services.html">Services</a></li>
-									<li><a data-hover="Services" href="apps.html">Apps</a></li>
-									<li><a href="about.html" data-hover="About">About Us</a></li>
-									<li><a href="career.html" data-hover="codes">Career</a></li>
-									<li><a data-hover="Contact" href="contact.html">Contact</a></li>
-								</ul>
-							</nav>
+						<div class="detail">
+							<ul>
+								<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +880 1701 64 48 79</li>
+								<li><i class="glyphicon glyphicon-time" aria-hidden="true"></i> Sun-Thurs 10:00 am to 8:00 pm </li>
+							</ul>
 						</div>
-						<!-- /.navbar-collapse -->
+						<div class="clearfix"></div>
 					</div>
-					<!-- /.container-fluid -->
-				</nav>
-				<div class="clearfix"></div>
+				</div>
+				<div class="container">
+					<div class="header-menu">
+						<nav class="navbar navbar-default">
+							<div class="container-fluid">
+								<!-- Brand and toggle get grouped for better mobile display -->
+								<div class="navbar-header">
+								  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+									<span class="sr-only">Toggle navigation</span>
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+								  </button>
+								  <div class="navbar-brand logo">
+										<h1><a href="index.html"><span>Bengal Mobile QA Solution</span></a></h1>
+									</div>
+								</div>
+								<!-- Collect the nav links, forms, and other content for toggling -->
+								<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+									<nav class="link-effect-4" id="link-effect-4"> 
+										<ul class="nav navbar-nav">
+											<li class="active"><a href="index.html" data-hover="Home">Home </a></li>
+											<li><a data-hover="Services" href="services.html">Services</a></li>
+											<li><a data-hover="Services" href="apps.html">Apps</a></li>
+											<li><a href="about.html" data-hover="About">About Us</a></li>
+											<li><a  href="career.html" data-hover="codes">Career</a></li>
+											<li><a data-hover="Contact" href="contact.html">Contact</a></li>
+										</ul>
+									</nav>
+								</div><!-- /.navbar-collapse -->
+							</div><!-- /.container-fluid -->
+						</nav>
+						<div class="clearfix"></div>
+					</div>	
+				</div> 
 			</div>
-		</div>
-	</div>
 	<!--header-->
+	
+
 	<!--banner-->
 	<div class="banner-section">
 		<div class="container">
@@ -109,7 +108,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<img src="images/b.png">
 								</div>
 								<div class="col-md-8 cap-right">
-									<h3>Web Application Build For You...</h3>
+									<h3>Web Application Built For You...</h3>
 								</div>
 								<div class="clearfix"></div>
 							</div>
@@ -120,7 +119,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<img src="images/b2.png">
 								</div>
 								<div class="col-md-8 cap-right">
-									<h3>Mobile Application Build For You...</h3>
+									<h3>Mobile Application Built For You...</h3>
 								</div>
 								<div class="clearfix"></div>
 							</div>
@@ -292,7 +291,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<p><i class="glyphicon glyphicon-home" aria-hidden="true"></i>53, Purana Paltan (2nd Floor),</p>
 				<p>Dhaka, 1000, BD</p>
 				<p><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:example@mail.com"> websales@Bengal Mobile QA Solution.com</a></p>
-				<p><i class="glyphicon glyphicon-phone" aria-hidden="true"></i>Telephone : +880 1700 15 22 56</p>
+				<p><i class="glyphicon glyphicon-phone" aria-hidden="true"></i>Telephone : +880 1701 64 48 79</p>
 
 
 			</div>
