--- a/bmqas/contact.html
+++ b/bmqas/contact.html
@@ -37,7 +37,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="detail">
 					<ul>
-						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +880 1700 15 22 56</li>
+						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +880 1701 64 48 79</li>
 						<li><i class="glyphicon glyphicon-time" aria-hidden="true"></i> Sun-Thurs 10:00 am to 8:00 pm </li>
 					</ul>
 				</div>
@@ -95,14 +95,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="col-md-4 contact-left">
 					<h4>Address</h4>
-					<p><span>Bengal Mobile QA Solution. 53, Purana Paltan (2nd Floor), Dhaka, 1000
+					<!-- <p><span>Bengal Mobile QA Solution. 53, Purana Paltan (2nd Floor), Dhaka, 1000
 							</span></p>
 					<ul>
 						<li>Free Phone :+1 078 4589 2456</li>
 						<li>Telephone :+1 078 4589 2456</li>
 
 						<li><a href="mailto:info@example.com">websales@Bengal Mobile QA Solution.com</a></li>
-					</ul>
+					</ul> -->
+					<p><i class="glyphicon glyphicon-home" aria-hidden="true"></i> 53, Purana Paltan (2nd Floor),Dhaka, 1000, BD</p>
+					<p><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:example@mail.com"> websales@Bengal Mobile QA Solution.com</a></p>
+					<p><i class="glyphicon glyphicon-phone" aria-hidden="true"></i>Telephone : +880 1701 64 48 79</p>
+	
 				</div>
 				<div class="col-md-8 contact-left cont">
 					<h4>Contact Form</h4>
@@ -171,7 +175,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<p><i class="glyphicon glyphicon-home" aria-hidden="true"></i>53, Purana Paltan (2nd Floor),</p>
 				<p>Dhaka, 1000, BD</p>
 				<p><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:example@mail.com"> websales@Bengal Mobile QA Solution.com</a></p>
-				<p><i class="glyphicon glyphicon-phone" aria-hidden="true"></i>Telephone : +880 1700 15 22 56</p>
+				<p><i class="glyphicon glyphicon-phone" aria-hidden="true"></i>Telephone : +880 1701 64 48 79</p>
 
 
 			</div>
