--- a/bmqas/apps.html
+++ b/bmqas/apps.html
@@ -225,7 +225,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<!--why choose us-->
 
 		<!--our Client-->
-		<div class="our-client">
+		<!-- <div class="our-client">
 				<div class="container">
 					<center><h2 style="margin-bottom: 20px;">Our Client</h2></center>
 					<section class="customer-logos slider">
@@ -241,7 +241,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	
 					</section>
 				</div>
-			</div>
+			</div> -->
 
 
 		<!--our Client-->
