--- a/bmqas/apps.html
+++ b/bmqas/apps.html
@@ -24,6 +24,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
 	<!--js-->
 	<link href="css/font-awesome.css" rel="stylesheet">
+	<link href="css/infinite-slider.css" rel="stylesheet">
 	
 
 </head>
@@ -225,23 +226,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<!--why choose us-->
 
 		<!--our Client-->
-		<!-- <div class="our-client">
-				<div class="container">
-					<center><h2 style="margin-bottom: 20px;">Our Client</h2></center>
-					<section class="customer-logos slider">
-						<div class="slide"><img src="images/client1.png"></div>
-						<div class="slide"><img src="images/client2.png"></div>
-						<div class="slide"><img src="images/client3.png"></div>
-						<div class="slide"><img src="images/client4.png"></div>
-						<div class="slide"><img src="images/client1.png"></div>
-						<div class="slide"><img src="images/client2.png"></div>
-						<div class="slide"><img src="images/client3.png"></div>
-						<div class="slide"><img src="images/client4.png"></div>
-						
-	
-					</section>
-				</div>
-			</div> -->
+		<div class="our-client">
+			<div class="container">
+				<center><h2 style="margin-bottom: 20px;">Our Client</h2></center>
+				<section class="customer-logos slider">
+					<div class="slide"><img src="images/client1.png"></div>
+					<div class="slide"><img src="images/client2.png"></div>
+					<div class="slide"><img src="images/client3.png"></div>
+					<div class="slide"><img src="images/client4.png"></div>
+					<div class="slide"><img src="images/client1.png"></div>
+					<div class="slide"><img src="images/client2.png"></div>
+					<div class="slide"><img src="images/client3.png"></div>
+					<div class="slide"><img src="images/client4.png"></div>
+					
+
+				</section>
+			</div>
+		</div>
 
 
 		<!--our Client-->
