final commit on 24/10/17

--- a/bmqas/header.html
+++ b/bmqas/header.html
@@ -1,53 +1,94 @@
-
-		<!--header-->
-		<div class="header">
-			<div class="header-top">
-				<div class="container">
-					<div class="indicat">
-						<span><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Bengal Mobile QA Solution. 53, Purana Paltan (2nd Floor), Dhaka, 1000</span>
-					</div>
-					<div class="detail">
-						<ul>
-							<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +880 1701 64 48 79</li>
-							<li><i class="glyphicon glyphicon-time" aria-hidden="true"></i> Sun-Thurs 10:00 am to 8:00 pm </li>
-						</ul>
-					</div>
-					<div class="clearfix"></div>
-				</div>
+<!--header-->
+<div class="header">
+	<div class="header-top">
+		<div class="container">
+			<div class="indicat">
+				<span><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Bengal Mobile QA Solution. 53, Purana Paltan (2nd Floor), Dhaka, 1000</span>
 			</div>
-			<div class="container">
-				<div class="header-menu">
-					<nav class="navbar navbar-default">
-						<div class="container-fluid">
-							<!-- Brand and toggle get grouped for better mobile display -->
-							<div class="navbar-header">
-							  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-								<span class="sr-only">Toggle navigation</span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-							  </button>
-							  <div class="navbar-brand logo">
-									<h1><a href="index.html"><span>Bengal Mobile QA Solution</span></a></h1>
+			<div class="detail">
+				<ul>
+					<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +880 1701 64 48 79</li>
+					<li><i class="glyphicon glyphicon-time" aria-hidden="true"></i> Sun-Thurs 10:00 am to 8:00 pm </li>
+					<li class="dropdown nav navbar-nav navbar-right">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+						<ul id="login-dp" class="dropdown-menu">
+							<li>
+								<div class="row">
+									<div class="col-md-12">
+										<span style="color:black ; margin-left: 3px;">Login  </span>
+
+										<form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+											<div class="form-group">
+												<label class="sr-only" for="exampleInputEmail2">Email address</label>
+												<input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
+											</div>
+											<div class="form-group">
+												<label class="sr-only" for="exampleInputPassword2">Password</label>
+												<input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+												<div class="help-block text-right"><a href="">Forget the password ?</a></div>
+											</div>
+											<div class="form-group">
+												<button type="submit" class="btn btn-primary btn-block">Sign in</button>
+											</div>
+											<div class="checkbox">
+												<label style="color:black">
+																   <input type="checkbox"> keep me logged-in
+																   </label>
+											</div>
+										</form>
+									</div>
+									<div class="bottom text-center">
+										<span style="color:black">new here ? </span> <a href="#"><b>Join Us</b></a>
+									</div>
 								</div>
-							</div>
-							<!-- Collect the nav links, forms, and other content for toggling -->
-							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-								<nav class="link-effect-4" id="link-effect-4"> 
-									<ul class="nav navbar-nav">
-										<li class="active"><a href="index.html" data-hover="Home">Home </a></li>
-										<li><a data-hover="Services" href="services.html">Services</a></li>
-										<li><a data-hover="Services" href="apps.html">Apps</a></li>
-										<li><a href="about.html" data-hover="About">About Us</a></li>
-										<li><a  href="career.html" data-hover="codes">Career</a></li>
-										<li><a data-hover="Contact" href="contact.html">Contact</a></li>
-									</ul>
-								</nav>
-							</div><!-- /.navbar-collapse -->
-						</div><!-- /.container-fluid -->
-					</nav>
-					<div class="clearfix"></div>
-				</div>	
-			</div> 
+							</li>
+						</ul>
+					</li>
+				</ul>
+
+			</div>
+			<div>
+
+			</div>
+			<div class="clearfix"></div>
 		</div>
+	</div>
+	<div class="container">
+		<div class="header-menu">
+			<nav class="navbar navbar-default">
+				<div class="container-fluid">
+					<!-- Brand and toggle get grouped for better mobile display -->
+					<div class="navbar-header ">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+						 aria-expanded="false">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						  </button>
+						<div class="navbar-brand logo">
+							<h1><a href="index.html"><span>Bengal Mobile QA Solution</span></a></h1>
+						</div>
+					</div>
+					<!-- Collect the nav links, forms, and other content for toggling -->
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+						<nav class="link-effect-4" id="link-effect-4">
+							<ul class="nav navbar-nav">
+								<li class="active"><a href="index.html" data-hover="Home">Home </a></li>
+								<li><a data-hover="Services" href="services.html">Services</a></li>
+								<li><a data-hover="Services" href="apps.html">Apps</a></li>
+								<li><a href="about.html" data-hover="About">About Us</a></li>
+								<li><a href="career.html" data-hover="codes">Career</a></li>
+								<li><a data-hover="Contact" href="contact.html">Contact</a></li>
+							</ul>
+						</nav>
+					</div>
+					<!-- /.navbar-collapse -->
+				</div>
+				<!-- /.container-fluid -->
+			</nav>
+			<div class="clearfix"></div>
+		</div>
+	</div>
+</div>
 <!--header-->
